A lot of progress, but going to rewrite major parts on a different branch first